log exception if plugin base does not exist or is not a folder